--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/inner-blocks/checkout-order-summary-block/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/inner-blocks/checkout-order-summary-block/style.scss
@@ -9,7 +9,7 @@
 	}
 
 	.wc-block-components-formatted-money-amount {
-		font-weight: 600;
+		font-weight: 500;
 	}
 
 	.wc-block-components-totals-wrapper:first-of-type {
